--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -54,6 +54,7 @@
     "IP address": "IP adres",
     "Website path": "Website map",
     "Creation date": "Aanmaakdatum",
+    "Date": "Datum",
     "FTP host": "FTP host",
     "FTP user": "FTP gebruiker",
     "FTP password": "FTP wachtwoord",
@@ -185,10 +186,16 @@
     "User has been detached": "Gebruiker is ontkoppeld",
     "Create package": "Pakket aanmaken",
     "Edit package": "Pakket bewerken",
+
     "Allow server creation": "Laat server aanmaken toe",
+    "This will allow users to create servers": "Dit maakt het mogelijk voor klanten om een server aan te maken",
+    "Allow server updating": "Laat server updaten toe",
+    "This will allow users to update servers": "Dit maakt het mogelijk voor klanten om hun server te updaten",
+    "Allow server deletion": "Laat server verwijderen toe",
+    "This will allow users to delete servers": "Dit maakt het mogelijk voor klante nom hun server te verwijderen",
+
     "Recent logs": "Recente gebeurtenissen",
     "Settings have been updated": "Instellingen zijn bijgewerkt",
-    "This will allow users to create servers": "Dit maakt het mogelijk voor klanten om een server aan te maken",
     "Are you sure you want to delete this package? Everything associated with this package will be detached.": "Weet je zeker dat je dit pakket wilt verwijderen? Alle gebruikers gekoppeld aan dit pakket zullen losgemaakt worden.",
     "Allow customer registration": "Zet klanten registraties open",
     "This will allow public users to register on your platform.": "Dit laat het toe gebruikers te registreren op je platform.",
