--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -194,6 +194,13 @@
     "Allow server deletion": "Laat server verwijderen toe",
     "This will allow users to delete servers": "Dit maakt het mogelijk voor klante nom hun server te verwijderen",
 
+    "Allow site creation": "Laat website aanmaken toe",
+    "This will allow users to create sites": "Dit maakt het mogelijk voor klanten om een server aan te maken",
+    "Allow site updating": "Laat website updaten toe",
+    "This will allow users to update sites": "Dit maakt het mogelijk voor klanten om hun server te updaten",
+    "Allow site deletion": "Laat website verwijderen toe",
+    "This will allow users to delete sites": "Dit maakt het mogelijk voor klante nom hun server te verwijderen",
+
     "Recent logs": "Recente gebeurtenissen",
     "Settings have been updated": "Instellingen zijn bijgewerkt",
     "Are you sure you want to delete this package? Everything associated with this package will be detached.": "Weet je zeker dat je dit pakket wilt verwijderen? Alle gebruikers gekoppeld aan dit pakket zullen losgemaakt worden.",
