--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -30,8 +30,10 @@
     "General": "Algemeen",
     "Settings": "Instellingen",
     "Billing": "Facturering",
-    "Card details": "Kaart instellingen",
+    "Card information": "Kaart informatie",
     "Available packages": "Beschikbare pakketten",
+    "Card holder name": "Kaarthouder naam",
+    "Card details": "Kaart gegevens",
     "Subscribe": "Abbonneer",
     "Administration": "Administratie",
     "Overview": "Overzicht",
