--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -10,6 +10,8 @@
     "Confirm": "Bevestig",
     "Command": "Commando",
     "Frequency": "Interval",
+    "Number": "Nummer",
+    "Total": "Totaal",
     "Are you sure?": "Weet je het zeker?",
     "Request": "Aanvragen",
     "View": "Bekijk",
@@ -34,6 +36,7 @@
     "Available packages": "Beschikbare pakketten",
     "Card holder name": "Kaarthouder naam",
     "Card details": "Kaart gegevens",
+    "Invoices": "Facturen",
     "Subscribe": "Abbonneer",
     "Administration": "Administratie",
     "Overview": "Overzicht",
