--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -183,6 +183,7 @@
     "Company name": "Bedrijfsnaam",
     "E-mail address": "Email adres",
     "Synchronize servers": "Synchroniseer servers",
+    "Synchronize providers": "Synchroniseer providers",
     "Synchronize sites": "Synchroniseer sites",
     "Edit server": "Bewerk server",
     "Edit site": "Bewerk website",
