--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -102,6 +102,7 @@
     "Light": "Licht",
     "Dark": "Donker",
     "Auto": "Automatisch",
+    "site|sites": "website|websites",
 
     "Support requests": "Support aanvragen",
     "Open support requests": "Openstaande aanvragen",
