wip custom certificates

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -92,6 +92,7 @@
     "Permanent": "Permanent",
     "Certificate has been created": "Certificaat is aangemaakt",
     "Certificate has been deleted": "Certificaat is verwijderd",
+    "Select certificate type": "Selecteer certificaat type",
     "Danger zone": "Gevaren zone",
     "Current password": "Huidig wachtwoord",
     "New password": "Nieuw wachtwoord",
