--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -104,6 +104,8 @@
     "Dark": "Donker",
     "Auto": "Automatisch",
     "site|sites": "website|websites",
+    "WordPress installed": "WordPress geïnstalleerd",
+    "Aliases": "Aliassen",
 
     "Support requests": "Support aanvragen",
     "Open support requests": "Openstaande aanvragen",
