--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -108,6 +108,7 @@
     "WordPress installed": "WordPress geïnstalleerd",
     "On server": "Op server",
     "Aliases": "Aliassen",
+    "Your alias will be deleted permanently, this action cannot be undone.": "Deze alias zal permanent verwijderd worden, deze actie kan niet ongedaan gemaakt worden.",
 
     "Support requests": "Support aanvragen",
     "Open support requests": "Openstaande aanvragen",
