--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -110,6 +110,7 @@
     "On server": "Op server",
     "Aliases": "Aliassen",
     "Your alias will be deleted permanently, this action cannot be undone.": "Deze alias zal permanent verwijderd worden, deze actie kan niet ongedaan gemaakt worden.",
+    "Alias has been created": "Alias is aangemaakt",
 
     "Support requests": "Support aanvragen",
     "Open support requests": "Openstaande aanvragen",
