--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -248,11 +248,19 @@
     "Are you sure you want to delete this package? Everything associated with this package will be detached.": "Weet je zeker dat je dit pakket wilt verwijderen? Alle gebruikers gekoppeld aan dit pakket zullen losgemaakt worden.",
     "Allow customer registration": "Zet klanten registraties open",
     "This will allow public users to register on your platform.": "Dit laat het toe gebruikers te registreren op je platform.",
+    "Receive email when customers create server": "Ontvang een email als klanten een server aanmaken",
+    "This will send an email to all admins notifying them about a new server installation.": "Dit zal een email sturen naar alle administrators over een nieuwe installatie.",
+    "Receive email when customers create site": "Ontvang een email als klanten een website aanmaken",
+    "This will send an email to all admins notifying them about a new site installation.": "Dit zal een email sturen naar alle administrators over een website installatie.",
+    "Enable API": "Zet API aan",
+    "This will allow you to interact with your system via the API.": "Dit maakt het mogelijk om te interacteren met het systeem via de API.",
+    "More information": "Meer informatie",
     "Create user": "Gebruiker aanmaken",
     "Enable support platform": "Zet ondersteunings platform aan",
     "This will allow your customers to make support requests to you.": "Dit maakt het mogelijk voor je klanten om contact op te kunnen nemen.",
     "Enable documentation platform": "Zet documentatie platform aan",
     "This will allow you to create articles for your users to look at.": "Dit maakt het mogelijk om artikelen te schrijven zoals tutorials.",
+    "Enable site isolation per site & user": "Zet site isolatie per website en server aan",
     "This will make sure each site created by one user is always isolated from another.": "Dit zorgt ervoor dat elke site die aangemaakt wordt op een aparte system user aangemaakt wordt, zodat elke site geïsoleerd is van elkaar.",
     "Send welcome email": "Verstuur welkom email",
     "Server has been updated": "Server is geüpdatet",
@@ -268,15 +276,18 @@
     "Create a new package here to attach to your users. You can create as many packages as you want, the advantage is that you are able to provide custom packages for your users.": "Je kunt hier een nieuw pakket aanmaken voor je gebruikers. Je kunt zoveel pakketten aanmaken als je wilt, het voordeel hiervan is dat je custom packages kan aanbieden aan je klanten.",
     "System update has been dispatched, this could take around 2/3 minutes for it to complete": "Systeem update is gestart, het kan 2 tot 3 minuten duren voordat de update klaar is",
     "A user has created a new server": "Een gebruiker heeft een nieuwe server aangemaakt",
-    "A new server with the name :server has been created by the user :user": "Er is een nieuwe server :server aangemaakt door gebruiker :user",
+    "A user has created a new site": "Een gebruiker heeft een nieuwe website aangemaakt",
+    "A new server with the name :server has been created by the user :user.": "Er is een nieuwe server :server aangemaakt door gebruiker :user.",
+    "A new site with the name **:site** has been created by the user :user.": "Er is een nieuwe website **:site** aangemaakt door gebruiker :user.",
+    "This site has been created on the server **:server**, the server currently has **:sites** of **:max** left.": "Deze site is aangemaakt op de server **:server**, de server heeft momenteel **:sites** van de **:max** bezet.",
     "Description": "Inhoud",
     "View user": "Bekijk gebruiker",
+    "View server": "Bekijk server",
     "Categories": "Categoriëen",
     "Category": "Categorie",
     "Create category": "Nieuwe categorie",
     "Articles": "Artikelen",
     "Create article": "Nieuw artikel",
     "You may use markdown in this field for markup": "Je kunt markdown gebruiken voor de opmaak van dit artikel",
-
     "Search on server name, or the name/email of the owner of the server": "Zoek op server naam, of de naam/email van de eigenaar van de server"
 }
