--- a/resources/lang/da.json
+++ b/resources/lang/da.json
@@ -3,7 +3,7 @@
     "Name": "Navn",
     "Edit": "Rediger",
     "Save": "Gem",
-    "Save changes": "Gem ændringer",
+    "Save": "Gem ændringer",
     "Delete": "Slet",
     "Create": "Opret",
     "Cancel": "Annuller",
