--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -3,7 +3,7 @@
     "Name": "Nombre",
     "Edit": "Editar",
     "Save": "Guardar",
-    "Save changes": "Guardar Cambios",
+    "Save": "Guardar Cambios",
     "Delete": "Borrar",
     "Create": "Crear",
     "Cancel": "Cancelar",
