--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -3,7 +3,7 @@
     "Name": "Nom",
     "Edit": "Modifier",
     "Save": "Sauvegarder",
-    "Save changes": "Sauvegarder",
+    "Save": "Sauvegarder",
     "Delete": "Supprimer",
     "Create": "Créer",
     "Cancel": "Annuler",
