--- a/resources/lang/nb-no.json
+++ b/resources/lang/nb-no.json
@@ -3,7 +3,7 @@
     "Name": "Navn",
     "Edit": "Rediger",
     "Save": "Lagre",
-    "Save changes": "Lagre endringer",
+    "Save": "Lagre endringer",
     "Delete": "Slett",
     "Create": "Opprett",
     "Cancel": "Avbryt",
