--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -3,7 +3,7 @@
     "Name": "Naam",
     "Edit": "Bewerk",
     "Save": "Opslaan",
-    "Save changes": "Opslaan",
+    "Save": "Opslaan",
     "Delete": "Verwijderen",
     "Create": "Aanmaken",
     "Cancel": "Annuleren",
