--- a/resources/lang/pt.json
+++ b/resources/lang/pt.json
@@ -3,7 +3,7 @@
     "Name": "Nome",
     "Edit": "Editar",
     "Save": "Salvar",
-    "Save changes": "Salvar alterações",
+    "Save": "Salvar alterações",
     "Delete": "Remover",
     "Create": "Criar",
     "Cancel": "Cancelar",
