Refactor localization handling in SetLocale middleware and update authentication views for translation support. Added missing translations for "Login to" and "Register" in multiple languages.

--- a/resources/lang/da.json
+++ b/resources/lang/da.json
@@ -104,6 +104,9 @@
     "Auto": "Auto",
     "site|sites": "side|sider",
 
+    "Login to": "Log ind til",
+    "Register": "Opret bruger",
+
     "Support requests": "Support anmodninger",
     "Open support requests": "Åbne support anmodninger",
     "Closed support requests": "Lukkede support anmodninger",
