--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -93,6 +93,9 @@
     "Dark": "Sombre",
     "Auto": "Automatique",
 
+    "Login to": "Connexion à",
+    "Register": "Créer un compte",
+
     "Support requests": "Requêtes",
     "Open support requests": "Requêtes en cours",
     "Closed support requests": "Requêtes fermées",
