--- a/resources/lang/nb-no.json
+++ b/resources/lang/nb-no.json
@@ -93,6 +93,9 @@
     "Dark": "Mørk",
     "Auto": "Auto",
 
+    "Login to": "Logg inn til",
+    "Register": "Opprett konto",
+
     "Support requests": "Supportforespørsler",
     "Open support requests": "Åpne supportforespørsler",
     "Closed support requests": "Lukkede supportforespørsler",
