--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -107,6 +107,8 @@
     "Light": "Licht",
     "Dark": "Donker",
     "Auto": "Automatisch",
+    "Login to": "Inloggen bij",
+    "Register": "Een account aanmaken",
     "site|sites": "website|websites",
     "WordPress installed": "WordPress geïnstalleerd",
     "On server": "Op server",
