--- a/resources/lang/pt.json
+++ b/resources/lang/pt.json
@@ -104,6 +104,9 @@
     "Auto": "Automático",
     "site|sites": "website|websites",
 
+    "Login to": "Entrar em",
+    "Register": "Registrar",
+
     "Support requests": "Pedidos de suporte",
     "Open support requests": "Solicitações de suporte abertas",
     "Closed support requests": "Pedidos de suporte fechados",
