--- a/resources/lang/zh.json
+++ b/resources/lang/zh.json
@@ -104,6 +104,9 @@
     "Auto": "自动",
     "site|sites": "站点|站群",
 
+    "Login to": "登入",
+    "Register": "注册",
+
     "Support requests": "请求支持",
     "Open support requests": "开启支持",
     "Closed support requests": "关闭支持",
